# sem1

./: .gitignore  CMakeLists.txt
src/: main.cpp
tests/: unit_tests.cpp
